# neural-net-c

./: CMakeLists.txt  Matrix.h  Test.h  main.cpp  tests.txt
dataset/: Load_data.h
matrix/: Matrix.h  Matrix_c.h  Test_matrix.h  a.out  main.cpp  tests.txt
neural_net/: Load_data.h  Loss_functions.h  Modules.h  Net.h  Network.h  Optimizer.h
